--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@angular/cdk": "^7.3.7",
     "@angular/material": "^7.3.7",
+    "@auth0/angular-jwt": "^2.1.0",
     "@fortawesome/fontawesome": "^1.1.8",
     "bcrypt": "^3.0.4",
     "bcryptjs": "^2.4.3",
